# ytlcli

./: .gitignore  playlist.json  pyproject.toml  readme.md  requirements.txt  test.html  test.json  ytlcli.py  ytmanager.py
src/: ytl_bridge.py  ytlcli.py  ytmanager.py  ytsearch.py
src/ytlcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
