[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytlcli"
version = "0.1.0"
dependencies = [
    "yt-dlp",
    "python-vlc",
    "youtube-search"
]

[project.scripts]
ytl = "ytlcli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ytlcli", "ytmanager"]
packages = []